--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "homepage": "https://github.com/Syul968/eduapp-backend#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "mocha": "^6.2.0",
     "mongoose": "^5.6.11"
   },
   "devDependencies": {
@@ -27,6 +29,6 @@
   },
   "scripts": {
     "start:dev": "nodemon --exec babel-node ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   }
 }
