--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "firebase-admin": "^8.4.0",
     "mocha": "^6.2.0",
     "mongo-seeding": "^3.3.0",
     "mongoose": "^5.6.11"
