Modificaciones en el .travis.yml, agregados dos script que se llaman desde el package.json para correr los seeders.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 language: node_js
 node_js: 
   - "stable"
+
+services:
+  - mongodb
+
+script:
+  - npm run seed1 #Esto llama al script del packaje.json. "node seed/user-seeder.js"
+  - npm run seed2
+
 cache:
   directories:
     - "node_modules"
