--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ services:
 script:
   - npm run seed1 #Esto llama al script del packaje.json. "node seed/user-seeder.js"
   - npm run seed2
+  - npm run test
 
 cache:
   directories:
