--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   },
   "scripts": {
     "start:dev": "nodemon --exec babel-node ./bin/www",
-    "seed1": "node seed/user-seeder.js", 
-    "seed2": "node seed/landingpage-seeder.js",
+    "seed-user": "node seed/user-seeder.js", 
+    "seed-landingpage": "node seed/landingpage-seeder.js",
     "test": "mocha"
   }
 }
