--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
   - mongodb
 
 script:
+  - openssl aes-256-cbc -K $encrypted_071b59b6f6a6_key -iv $encrypted_071b59b6f6a6_iv -in service-account.json.enc -out ./server/config/service-account.json -d
   - npm run seed1 #Esto llama al script del packaje.json. "node seed/user-seeder.js"
   - npm run seed2
   - npm run test
