Topics seeder, tutors seeder and more scaffolding

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "start:dev": "nodemon --exec babel-node ./bin/www",
     "seed-user": "node seed/user-seeder.js",
     "seed-landingpage": "node seed/landingpage-seeder.js",
+    "seed-tutor": "node seed/tutor-seeder.js",
+    "seed-topic": "node seed/topic-seeder.js",
     "test": "mocha"
   }
 }
