--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
 script:
   - mkdir -p ./server/config
   - openssl aes-256-cbc -K $encrypted_071b59b6f6a6_key -iv $encrypted_071b59b6f6a6_iv -in service-account.json.enc -out ./server/config/service-account.json -d
+  - nohup npm run start:dev 
   - npm run seed
   - npm run test
 
