--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - mongodb
 
 env:
-  -DB_LOCATION=local
-  -DB_HOST=127.0.0.1
-  -DB_PORT=27017
-  -DB_NAME=test
+  -DB_HOST=cluster0-hguuw.mongodb.net/test?retryWrites=true&w=majority
+  -DB_USER=eduapp
+  -DB_PASS=eduapp07
+  -DB_LOCATION=remote
 
 before_script:
   - sleep 15
@@ -18,8 +18,8 @@ before_script:
 script:
   - mkdir -p ./server/config
   - openssl aes-256-cbc -K $encrypted_071b59b6f6a6_key -iv $encrypted_071b59b6f6a6_iv -in service-account.json.enc -out ./server/config/service-account.json -d
-  - nohup npm run start:dev 
   - npm run seed
+  - npm run start:dev &
   - npm run test
 
 cache:
