--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "firebase-admin": "^8.4.0",
+    "firebase-admin": "^8.6.1",
     "mocha": "^6.2.1",
     "mongo-seeding": "^3.3.0",
-    "mongoose": "^5.6.11"
+    "mongoose": "^5.6.11",
+    "nodemailer": "^6.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
